Add Morgan logging & error handler middleware
* Add Express routes for / and /movies endpoints
* Serve documentation.html using express.static middleware
* Integrate Morgan middleware for request logging
* Implement error-handling middleware for app-level errors

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </p>
     <p>
       To learn how to use this API, visit the
-      <a href="/documentation">documentation page</a>.
+      <a href="/public/documentation.html">documentation page</a>.
     </p>
   </body>
 </html>
