--- a/public/documentation.html
+++ b/public/documentation.html
@@ -6,11 +6,15 @@
     <title>Movie API Documentation</title>
   </head>
   <body>
-    <h1>MyFlix Movie API</h1>
+    <h1>Welcome to the Movie API Documentation</h1>
     <p>
       The MyFlix API allows users to access information about different movies,
       directors, and genres. Users are able to sign up, update their personal
       information, and create a list of their favorite movies.
+    </p>
+    <p>
+      Registered users can sign up, update their profiles, and maintain a
+      personalized list of favorite movies.
     </p>
   </body>
 </html>
