--- a/public/documentation.html
+++ b/public/documentation.html
@@ -5,122 +5,144 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Movie API Documentation</title>
   </head>
+  <h1>Welcome to the Movie API Documentation</h1>
+  <p>
+    The MyFlix API allows users to access information about different movies,
+    directors, and genres. Users are able to sign up, update their personal
+    information, and create a list of their favorite movies.
+  </p>
+  <p>
+    Registered users can sign up, update their profiles, and maintain a
+    personalized list of favorite movies.
+  </p>
   <body>
-    <h1>Welcome to the Movie API Documentation</h1>
-    <p>
-      The MyFlix API allows users to access information about different movies,
-      directors, and genres. Users are able to sign up, update their personal
-      information, and create a list of their favorite movies.
-    </p>
-    <p>
-      Registered users can sign up, update their profiles, and maintain a
-      personalized list of favorite movies.
-    </p>
-    <h2>API Endpoints</h2>
-    <table border="1" cellpadding="10" cellspacing="0">
-      <thead>
-        <tr>
-          <th>Request</th>
-          <th>URL</th>
-          <th>Method</th>
-          <th>Request Body (if applicable)</th>
-          <th>Response</th>
-          <th>Description</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td>Get all movies</td>
-          <td>/movies</td>
-          <td>GET</td>
-          <td>None</td>
-          <td>List of all movies</td>
-          <td>Returns an array of all movies</td>
-        </tr>
-        <tr>
-          <td>Get movie by title</td>
-          <td>/movies/:title</td>
-          <td>GET</td>
-          <td>None</td>
-          <td>Movie object</td>
-          <td>Returns data about a single movie by title</td>
-        </tr>
-        <tr>
-          <td>Get genre by name</td>
-          <td>/genres/:name</td>
-          <td>GET</td>
-          <td>None</td>
-          <td>Genre description</td>
-          <td>Returns description of a genre by name</td>
-        </tr>
-        <tr>
-          <td>Get movies by genre and director</td>
-          <td>/movies?genre=Comedy&director=Wes%20Anderson</td>
-          <td>GET</td>
-          <td>None</td>
-          <td>Filtered movie list</td>
-          <td>Returns movies that match both genre and director</td>
-        </tr>
-        <tr>
-          <td>Get director by name</td>
-          <td>/directors/:name</td>
-          <td>GET</td>
-          <td>None</td>
-          <td>Director details</td>
-          <td>Returns bio, birth year, and death year of a director</td>
-        </tr>
-        <tr>
-          <td>Register new user</td>
-          <td>/users</td>
-          <td>POST</td>
-          <td>
-            { "username": "user1", "password": "123", "email":
-            "user@example.com" }
-          </td>
-          <td>Confirmation message</td>
-          <td>Allows a new user to register</td>
-        </tr>
-        <tr>
-          <td>Update user info</td>
-          <td>/users/:username</td>
-          <td>PUT</td>
-          <td>{ "username": "newname", "email": "new@example.com" }</td>
-          <td>Updated user data</td>
-          <td>Allows a user to update their info</td>
-        </tr>
-        <tr>
-          <td>Update movie info</td>
-          <td>/movies/:title</td>
-          <td>PUT</td>
-          <td>{ "Genre.Description": "Updated description" }</td>
-          <td>Updated movie object</td>
-          <td>Updates details of a specific movie</td>
-        </tr>
-        <tr>
-          <td>Add movie to favorites</td>
-          <td>/users/:username/favorites/:movieTitle</td>
-          <td>POST</td>
-          <td>None</td>
-          <td>Confirmation message</td>
-          <td>Adds a movie to a user's favorite list</td>
-        </tr>
-        <tr>
-          <td>Remove movie from favorites</td>
-          <td>/users/:username/favorites/:movieTitle</td>
-          <td>DELETE</td>
-          <td>None</td>
-          <td>Confirmation message</td>
-          <td>Removes a movie from a user's favorite list</td>
-        </tr>
-        <tr>
-          <td>Deregister user</td>
-          <td>/users/:username</td>
-          <td>DELETE</td>
-          <td>None</td>
-          <td>Confirmation message</td>
-          <td>Removes a user account</td>
-        </tr>
-      </tbody>
-    </table>
+    <section>
+      <h2>GET /movies</h2>
+      <p>Returns a list of all movies in the database.</p>
+      <p><strong>Method:</strong> GET</p>
+      <p><strong>Response:</strong></p>
+      <pre>
+[
+  {
+    "title": "Inception",
+    "description": "A thief who steals corporate secrets...",
+    "genre": { "name": "Sci-Fi", "description": "Science fiction" },
+    "director": { "name": "Christopher Nolan", "bio": "...", "birthYear": 1970 },
+    "releaseYear": 2010,
+    "featured": true
+  }
+]
+    </pre
+      >
+    </section>
+
+    <section>
+      <h2>GET /movies/:title</h2>
+      <p>Returns details about a single movie by title.</p>
+      <p><strong>Method:</strong> GET</p>
+      <p><strong>Response:</strong></p>
+      <pre>
+{
+  "title": "Inception",
+  "description": "...",
+  "genre": { "name": "Sci-Fi", "description": "..." },
+  "director": { "name": "Christopher Nolan", "bio": "...", "birthYear": 1970 },
+  "releaseYear": 2010,
+  "featured": true
+}
+    </pre
+      >
+    </section>
+
+    <section>
+      <h2>GET /genres/:name</h2>
+      <p>Returns genre details by name.</p>
+      <p><strong>Method:</strong> GET</p>
+      <p><strong>Response:</strong></p>
+      <pre>
+{
+  "name": "Thriller",
+  "description": "Suspenseful and intense"
+}
+    </pre
+      >
+    </section>
+
+    <section>
+      <h2>GET /directors/:name</h2>
+      <p>Returns director details by name.</p>
+      <p><strong>Method:</strong> GET</p>
+      <p><strong>Response:</strong></p>
+      <pre>
+{
+  "name": "Christopher Nolan",
+  "bio": "British-American filmmaker",
+  "birthYear": 1970
+}
+    </pre
+      >
+    </section>
+
+    <section>
+      <h2>POST /users</h2>
+      <p>Registers a new user.</p>
+      <p><strong>Method:</strong> POST</p>
+      <p><strong>Request Body:</strong></p>
+      <pre>
+{
+  "username": "johndoe",
+  "password": "secure123",
+  "email": "john@example.com",
+  "birthday": "1990-01-01"
+}
+    </pre
+      >
+      <p><strong>Response:</strong> Created user object</p>
+    </section>
+
+    <section>
+      <h2>PUT /users/:username</h2>
+      <p>Updates user information.</p>
+      <p><strong>Method:</strong> PUT</p>
+      <p><strong>Request Body:</strong></p>
+      <pre>
+{
+  "email": "newemail@example.com",
+  "password": "newpass456"
+}
+    </pre
+      >
+      <p><strong>Response:</strong> Updated user object</p>
+    </section>
+
+    <section>
+      <h2>POST /users/:username/movies/:movieID</h2>
+      <p>Adds a movie to the user's list of favorites.</p>
+      <p><strong>Method:</strong> POST</p>
+      <p><strong>Response:</strong> Updated user object with favoriteMovies</p>
+    </section>
+
+    <section>
+      <h2>DELETE /users/:username/movies/:movieID</h2>
+      <p>Removes a movie from the user's list of favorites.</p>
+      <p><strong>Method:</strong> DELETE</p>
+      <p>
+        <strong>Response:</strong> Updated user object without the removed movie
+      </p>
+    </section>
+
+    <section>
+      <h2>DELETE /users/:username</h2>
+      <p>Deregisters a user.</p>
+      <p><strong>Method:</strong> DELETE</p>
+      <p><strong>Response:</strong></p>
+      <pre>
+{
+  "message": "User deleted",
+  "user": { ... }
+}
+    </pre
+      >
+    </section>
   </body>
 </html>
