Add example URLs for all endpoints
Refactor documentation.html to include example URLs for all endpoints

--- a/public/documentation.html
+++ b/public/documentation.html
@@ -25,6 +25,7 @@
       </h2>
       <p><strong>Description:</strong> Returns a list of all movies.</p>
       <p><strong>Method:</strong> GET</p>
+      <p><strong>Example URL:</strong> <code>/movies</code></p>
       <p><strong>Response Example:</strong></p>
       <pre><code>{
     "_id": "60f1c...",
@@ -50,6 +51,7 @@
         title.
       </p>
       <p><strong>Method:</strong> GET</p>
+      <p><strong>Example URL:</strong> <code>/movies/Inception</code></p>
       <p><strong>Response Example:</strong></p>
       <pre><code>{
     "Title": "Inception",
@@ -71,6 +73,7 @@
       </h2>
       <p><strong>Description:</strong> Returns genre details by name.</p>
       <p><strong>Method:</strong> GET</p>
+      <p><strong>Example URL:</strong> <code>/genres/Thriller</code></p>
       <p><strong>Response Example:</strong></p>
       <pre><code>{
   "Name": "Thriller",
@@ -85,6 +88,10 @@
       </h2>
       <p><strong>Description:</strong> Returns director details by name.</p>
       <p><strong>Method:</strong> GET</p>
+      <p>
+        <strong>Example URL:</strong>
+        <code>/directors/Christopher%20Nolan</code>
+      </p>
       <p><strong>Response Example:</strong></p>
       <pre><code>{
   "Name": "Christopher Nolan",
@@ -98,6 +105,7 @@
       </h2>
       <p><strong>Description:</strong> Registers a new user.</p>
       <p><strong>Method:</strong> POST</p>
+      <p><strong>Example URL:</strong> <code>/users</code></p>
       <p><strong>Request Body:</strong></p>
       <pre><code>{
     "username": "kevinM",
@@ -116,6 +124,7 @@
       </h2>
       <p><strong>Description:</strong> Updates user information.</p>
       <p><strong>Method:</strong> PUT</p>
+      <p><strong>Example URL:</strong> <code>/users/kevinM</code></p>
       <p><strong>Request Body:</strong></p>
       <pre><code>{
   "username": "kevinM",
@@ -134,6 +143,10 @@
         favorites.
       </p>
       <p><strong>Method:</strong> POST</p>
+      <p>
+        <strong>Example URL:</strong>
+        <code>/users/kevinM/movies/64f24a8cf82e4a5b3c12345b</code>
+      </p>
       <p><strong>Response:</strong> Updated user object with favoriteMovies.</p>
     </section>
 
@@ -148,6 +161,10 @@
       </p>
       <p><strong>Method:</strong> DELETE</p>
       <p>
+        <strong>Example URL:</strong>
+        <code>/users/kevinM/movies/64f24a8cf82e4a5b3c12345b</code>
+      </p>
+      <p>
         <strong>Response:</strong> Updated user object without the removed
         movie.
       </p>
@@ -160,6 +177,7 @@
       </h2>
       <p><strong>Description:</strong> Deregisters a user.</p>
       <p><strong>Method:</strong> DELETE</p>
+      <p><strong>Example URL:</strong> <code>/users/kevinM</code></p>
       <p><strong>Response Example:</strong></p>
       <pre><code>{
   "message": "User deleted",
