Add Swagger API documentation setup

--- a/index.html
+++ b/index.html
@@ -14,17 +14,26 @@
       h1 {
         color: #2c3e50;
       }
+      a {
+        color: #3498db;
+      }
     </style>
   </head>
   <body>
-    <h1>Welcome to the Movie API</h1>
+    <h1>🎬 Welcome to the Movie API</h1>
     <p>
       This API provides access to information about different movies. It allows
-      users to retrieve details such as title, genre, director, and more.
+      users to retrieve details such as
+      <strong>title</strong>, <strong>genre</strong>, <strong>director</strong>,
+      and more.
     </p>
-    <p>
-      To learn how to use this API, visit the
-      <a href="/public/documentation.html">documentation page</a>.
-    </p>
+    <p>To learn how to use this API, check out the documentation below:</p>
+
+    <ul>
+      <li><a href="/public/documentation.html">HTML Documentation Page</a></li>
+      <li>
+        <a href="http://127.0.0.1:8080/api-docs/">Swagger Documentation</a>
+      </li>
+    </ul>
   </body>
 </html>
