Add Swagger setup and welcome page

--- a/index.html
+++ b/index.html
@@ -30,9 +30,29 @@
     <p>To learn how to use this API, check out the documentation below:</p>
 
     <ul>
-      <li><a href="/public/documentation.html">HTML Documentation Page</a></li>
       <li>
-        <a href="http://127.0.0.1:8080/api-docs/">Swagger Documentation</a>
+        📄 <a href="/public/documentation.html" target="_blank" rel="noopener">HTML Documentation (Local)</a>
+      </li>
+      <li>
+        🔧 <a href="http://127.0.0.1:8080/api-docs/" target="_blank" rel="noopener">Swagger Docs (Local)</a>
+      </li>
+      <li>
+        🌐
+        <a
+          href="https://flix-fusion-api-movies-51cd1c6d37f8.herokuapp.com/documentation.html"
+          target="_blank"
+          rel="noopener"
+          >HTML Documentation (Deployed)</a
+        >
+      </li>
+      <li>
+        🚀
+        <a
+          href="https://flix-fusion-api-movies-51cd1c6d37f8.herokuapp.com/api-docs/"
+          target="_blank"
+          rel="noopener"
+          >Swagger Docs (Deployed)</a
+        >
       </li>
     </ul>
   </body>
