Add homepage route with links to documentation (local and deployed)
Set up root route with welcome page and navigation to Swagger/HTML docs

--- a/index.html
+++ b/index.html
@@ -31,10 +31,16 @@
 
     <ul>
       <li>
-        📄 <a href="/public/documentation.html" target="_blank" rel="noopener">HTML Documentation (Local)</a>
+        📄
+        <a href="/public/documentation.html" target="_blank" rel="noopener"
+          >HTML Documentation (Local)</a
+        >
       </li>
       <li>
-        🔧 <a href="http://127.0.0.1:8080/api-docs/" target="_blank" rel="noopener">Swagger Docs (Local)</a>
+        🔧
+        <a href="http://127.0.0.1:8080/api-docs/" target="_blank" rel="noopener"
+          >Swagger Docs (Local)</a
+        >
       </li>
       <li>
         🌐
