--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,7 @@
     <ul>
       <li>
         📄
-        <a href="/public/documentation.html" target="_blank" rel="noopener"
+        <a href="/documentation.html" target="_blank" rel="noopener"
           >HTML Documentation (Local)</a
         >
       </li>
