Set root route to serve index.html from public folder
Serve index.html from root URL using express.static and sendFile; cleanup for Heroku deployment

--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
     </style>
   </head>
   <body>
-    <h1>🎬 Welcome to the Movie API</h1>
+    <h1>🎬 Welcome to the Movie API Documentation</h1>
     <p>
       This API provides access to information about different movies. It allows
       users to retrieve details such as
@@ -31,32 +31,14 @@
 
     <ul>
       <li>
-        📄
-        <a href="/documentation.html" target="_blank" rel="noopener"
-          >HTML Documentation (Local)</a
-        >
-      </li>
-      <li>
-        🔧
-        <a href="http://127.0.0.1:8080/api-docs/" target="_blank" rel="noopener"
-          >Swagger Docs (Local)</a
-        >
-      </li>
-      <li>
         🌐
-        <a
-          href="https://flix-fusion-api-movies-51cd1c6d37f8.herokuapp.com/documentation.html"
-          target="_blank"
-          rel="noopener"
+        <a href="/documentation.html" target="_blank" rel="noopener"
           >HTML Documentation (Deployed)</a
         >
       </li>
       <li>
         🚀
-        <a
-          href="https://flix-fusion-api-movies-51cd1c6d37f8.herokuapp.com/api-docs/"
-          target="_blank"
-          rel="noopener"
+        <a href="/api-docs/" target="_blank" rel="noopener"
           >Swagger Docs (Deployed)</a
         >
       </li>
