Update URLs after repo rename

--- a/public/documentation.html
+++ b/public/documentation.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="/styles.css" /> <!-- ✅ Works with express.static -->
+    <link rel="stylesheet" href="/styles.css" />
+    <!-- ✅ Works with express.static -->
     <title>🎬 Movie API Documentation</title>
   </head>
   <body>
@@ -14,7 +15,7 @@
       favorite movies. Responses are returned in JSON format.
     </p>
     <p>
-      The API is hosted on Heroku and uses MongoDB Atlas for secure and scalable
+      The API is hosted on Render and uses MongoDB Atlas for secure and scalable
       data storage.
     </p>
     <hr />
